feat: implement rate limiting for API endpoints and enhance security measures
- Added rate limiting middleware for /apiv1/nearby and /apiv1/chargers endpoints.
- Introduced validation for latitude and longitude inputs in /apiv1/nearby.
- Migrated Telegram bot from node-telegram-bot-api to Telegraf, updating handlers and initialization.
- Implemented security headers and CORS configuration in app.js.
- Created .env.example for environment variable documentation.
- Added SECURITY_CHANGES.md to log security enhancements.
- Updated dependencies and ensured no vulnerabilities remain post-migration.

--- a/android-native/app/build.gradle
+++ b/android-native/app/build.gradle
@@ -14,6 +14,7 @@ android {
         targetSdk 34
         versionCode 1
         versionName "1.0.0"
+        manifestPlaceholders = [usesCleartextTraffic: "false"]
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -21,10 +22,12 @@ android {
     buildTypes {
         release {
             minifyEnabled true
+            manifestPlaceholders = [usesCleartextTraffic: "false"]
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
             minifyEnabled false
+            manifestPlaceholders = [usesCleartextTraffic: "true"]
         }
     }
     
@@ -40,6 +43,11 @@ android {
     buildFeatures {
         viewBinding true
     }
+}
+
+secrets {
+    propertiesFileName = "secrets.properties"
+    defaultPropertiesFileName = "local.defaults.properties"
 }
 
 dependencies {
