--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "fast-xml-parser": "^5.3.4",
     "http-errors": "^2.0.1",
     "morgan": "^1.9.1",
-    "node-telegram-bot-api": "^0.67.0",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "telegraf": "^4.16.3"
   }
 }
